# dynnow

./: .gitignore  LICENSE  README.md  pyproject.toml
doc/: example.ipynb
examples/LDCast/: comp_error_structure_all.py  forecast.py  predict_all.py
examples/STEPS/: comp_error_structure_all.py  forecast.py  predict_all.py
src/dynnow/: analysis.py  ensemble.py  plot.py  plots.py  surrogates.py  utils.py
